--- a/index.html
+++ b/index.html
@@ -65,18 +65,30 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h1>StallScrawl!</h1>
-        <p>This is a quick way to find the bathroom in the building of Northwestern.</p>
-        <p><a href="#" class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>
+        <h3>StallScrawl!</h3>
+        <p><font size = "3" >This is a quick way to find the bathroom in the building of Northwestern.</font></p>
+        <p><a href="#" class="btn btn-primary btn-xs" role="button">Learn more &raquo;</a></p>
       </div>
 
 
 
       <div class="page-header">
-        <h1>Buildings Near You</h1>
+        <h5>Buildings Near You</h5>
       </div>
       <p>
         <button type="button" class="btn btn-lg btn-default">Default</button>
+          	<button class="dropdown">
+            	<a href="#" class="dropdown-toggle" data-toggle="dropdown">MUDD <b class="caret"></b></a>
+            	<ul class="dropdown-menu">
+              		<li><a href="#">Action</a></li>
+              		<li><a href="#">Another action</a></li>
+              		<li><a href="#">Something else here</a></li>
+              		<li class="divider"></li>
+              		<li class="dropdown-header">Nav header</li>
+              		<li><a href="#">Separated link</a></li>
+              		<li><a href="#">One more separated link</a></li>
+            	</ul>
+          	</button>
         <button type="button" class="btn btn-lg btn-primary">Primary</button>
         <button type="button" class="btn btn-lg btn-success">Success</button>
         <button type="button" class="btn btn-lg btn-info">Info</button>
