--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Bootstrap theme</a>
+          <a class="navbar-brand" href="#">Home</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -76,19 +76,14 @@
         <h5>Buildings Near You</h5>
       </div>
       <p>
-        <button type="button" class="btn btn-lg btn-default">Default</button>
-          	<button class="dropdown">
-            	<a href="#" class="dropdown-toggle" data-toggle="dropdown">MUDD <b class="caret"></b></a>
-            	<ul class="dropdown-menu">
-              		<li><a href="#">Action</a></li>
-              		<li><a href="#">Another action</a></li>
-              		<li><a href="#">Something else here</a></li>
-              		<li class="divider"></li>
-              		<li class="dropdown-header">Nav header</li>
-              		<li><a href="#">Separated link</a></li>
-              		<li><a href="#">One more separated link</a></li>
-            	</ul>
-          	</button>
+        <button class="dropdown btn-info">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">MUDD <b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Floor 1</a></li>
+              <li><a href="#">Floor 2</a></li>
+              <li><a href="#">Floor 3</a></li>
+            </ul>
+        </button>
         <button type="button" class="btn btn-lg btn-primary">Primary</button>
         <button type="button" class="btn btn-lg btn-success">Success</button>
         <button type="button" class="btn btn-lg btn-info">Info</button>
