--- a/index.html
+++ b/index.html
@@ -76,8 +76,16 @@
         <h5>Buildings Near You</h5>
       </div>
       <p>
-        <button class="dropdown btn-info">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">MUDD <b class="caret"></b></a>
+        <button class="dropdown btn-lg btn-warning">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mudd Library<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Floor 1</a></li>
+              <li><a href="#">Floor 2</a></li>
+              <li><a href="#">Floor 3</a></li>
+            </ul>
+        </button>
+        <button class="dropdown btn-lg btn-warning">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">France Searle <b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="#">Floor 1</a></li>
               <li><a href="#">Floor 2</a></li>
@@ -89,7 +97,6 @@
         <button type="button" class="btn btn-lg btn-info">Info</button>
         <button type="button" class="btn btn-lg btn-warning">Warning</button>
         <button type="button" class="btn btn-lg btn-danger">Danger</button>
-        <button type="button" class="btn btn-lg btn-link">Link</button>
       </p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
