--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <h5>Buildings Near You</h5>
       </div>
       <p>
+      <ul>
         <button class="dropdown btn-lg btn-warning">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mudd Library<b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -92,11 +93,24 @@
               <li><a href="#">Floor 3</a></li>
             </ul>
         </button>
-        <button type="button" class="btn btn-lg btn-primary">Primary</button>
-        <button type="button" class="btn btn-lg btn-success">Success</button>
-        <button type="button" class="btn btn-lg btn-info">Info</button>
-        <button type="button" class="btn btn-lg btn-warning">Warning</button>
-        <button type="button" class="btn btn-lg btn-danger">Danger</button>
+        <button class="dropdown btn-lg btn-warning">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Ford Building<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Floor 1</a></li>
+              <li><a href="#">Floor 2</a></li>
+              <li><a href="#">Floor 3</a></li>
+            </ul>
+       </button>
+       <button class="dropdown btn-lg btn-warning">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tech Building<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              <li><a href="#">Floor 1</a></li>
+              <li><a href="#">Floor 2</a></li>
+              <li><a href="#">Floor 3</a></li>
+              <li><a href="#">Floor 4</a></li>           
+            </ul>
+       </button>
+       </ul>
       </p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
