--- a/index.html
+++ b/index.html
@@ -76,42 +76,46 @@
         <h5>Buildings Near You</h5>
       </div>
       <p>
-      <ul>
-        <button class="dropdown btn-lg btn-warning">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mudd Library<b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Floor 1</a></li>
-              <li><a href="#">Floor 2</a></li>
-              <li><a href="#">Floor 3</a></li>
+      <div class="btn-group">
+  		<button type="button" class="btn btn-lg btn-primary">Mudd Libary</button>
+		<div class="btn-group">
+    	    <button type="button" class="btn btn-lg btn-primary dropdown-toggle" data-toggle="dropdown">
+      	       <span class="caret"></span>
+    	    </button>
+    	    <ul class="dropdown-menu">
+               <li><a href="#">Floor 1</a></li>
+               <li><a href="#">Floor 2</a></li>
+               <li><a href="#">Floor 3</a></li>
             </ul>
-        </button>
-        <button class="dropdown btn-lg btn-warning">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">France Searle <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Floor 1</a></li>
-              <li><a href="#">Floor 2</a></li>
-              <li><a href="#">Floor 3</a></li>
+        </div>
+      </div>
+      <div class="btn-group">
+  		<button type="button" class="btn btn-lg btn-primary">Ford Building</button>
+		<div class="btn-group">
+    	    <button type="button" class="btn btn-lg btn-primary dropdown-toggle" data-toggle="dropdown">
+      	       <span class="caret"></span>
+    	    </button>
+    	    <ul class="dropdown-menu">
+               <li><a href="#">Floor 1</a></li>
+               <li><a href="#">Floor 2</a></li>
+               <li><a href="#">Floor 3</a></li>
             </ul>
-        </button>
-        <button class="dropdown btn-lg btn-warning">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Ford Building<b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Floor 1</a></li>
-              <li><a href="#">Floor 2</a></li>
-              <li><a href="#">Floor 3</a></li>
+        </div>
+      </div>    
+     <div class="btn-group">
+  		<button type="button" class="btn btn-lg btn-primary">Tech Building</button>
+		<div class="btn-group">
+    	    <button type="button" class="btn btn-lg btn-primary dropdown-toggle" data-toggle="dropdown">
+      	       <span class="caret"></span>
+    	    </button>
+    	    <ul class="dropdown-menu">
+               <li><a href="#">Floor 1</a></li>
+               <li><a href="#">Floor 2</a></li>
+               <li><a href="#">Floor 3</a></li>
             </ul>
-       </button>
-       <button class="dropdown btn-lg btn-warning">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Tech Building<b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Floor 1</a></li>
-              <li><a href="#">Floor 2</a></li>
-              <li><a href="#">Floor 3</a></li>
-              <li><a href="#">Floor 4</a></li>           
-            </ul>
-       </button>
-       </ul>
-      </p>
+        </div>
+     </div>     
+     </p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
