--- a/index.html
+++ b/index.html
@@ -76,6 +76,21 @@
         <h5>Buildings Near You</h5>
       </div>
       <p>
+           <p>
+      
+  		<button type="button" class="btn btn-lg btn-primary btn-block" >Mudd Libary</button>
+		<div class="btn-group">
+    	    <button type="button" class="btn btn-lg btn-primary dropdown-toggle" data-toggle="dropdown">
+      	       <span class="caret"></span>
+    	    </button>
+    	    <ul class="dropdown-menu">
+               <li><a href="#">Floor 1</a></li>
+               <li><a href="#">Floor 2</a></li>
+               <li><a href="#">Floor 3</a></li>
+            </ul>
+        </div>
+      
+      </p>
       <p>
       <div class="btn-group">
   		<button type="button" class="btn btn-lg btn-primary">Mudd Libary</button>
@@ -92,7 +107,7 @@
       </div>
       </p>
       <p>
-      <div class="btn-group">
+      <div class="btn-group ">
   		<button type="button" class="btn btn-lg btn-primary">Ford Building</button>
 		<div class="btn-group">
     	    <button type="button" class="btn btn-lg btn-primary dropdown-toggle" data-toggle="dropdown">
@@ -105,7 +120,8 @@
             </ul>
         </div>
       </div>
-      </p>    
+      </p> 
+      <p>   
      <div class="btn-group">
   		<button type="button" class="btn btn-lg btn-primary">Tech Building</button>
 		<div class="btn-group">
@@ -116,9 +132,11 @@
                <li><a href="#">Floor 1</a></li>
                <li><a href="#">Floor 2</a></li>
                <li><a href="#">Floor 3</a></li>
+               <li><a href="#">Floor 4</a></li>
             </ul>
         </div>
-     </div>     
+     </div>
+     </p>     
      </p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
