--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <!-- Custom styles for this template -->
     <link href="http://getbootstrap.com/examples/theme/theme.css" rel="stylesheet">
+    <link href="theme.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -76,24 +77,9 @@
         <h5>Buildings Near You</h5>
       </div>
       <p>
-           <p>
-      
-  		<button type="button" class="btn btn-lg btn-primary btn-block" >Mudd Libary</button>
-		<div class="btn-group">
-    	    <button type="button" class="btn btn-lg btn-primary dropdown-toggle" data-toggle="dropdown">
-      	       <span class="caret"></span>
-    	    </button>
-    	    <ul class="dropdown-menu">
-               <li><a href="#">Floor 1</a></li>
-               <li><a href="#">Floor 2</a></li>
-               <li><a href="#">Floor 3</a></li>
-            </ul>
-        </div>
-      
-      </p>
       <p>
-      <div class="btn-group">
-  		<button type="button" class="btn btn-lg btn-primary">Mudd Libary</button>
+      <div class="btn-group btn-block">
+  		<button type="button" class="btn btn-lg btn-primary btn-block">Mudd Libary</button>
 		<div class="btn-group">
     	    <button type="button" class="btn btn-lg btn-primary dropdown-toggle" data-toggle="dropdown">
       	       <span class="caret"></span>
@@ -107,8 +93,8 @@
       </div>
       </p>
       <p>
-      <div class="btn-group ">
-  		<button type="button" class="btn btn-lg btn-primary">Ford Building</button>
+      <div class="btn-group btn-block">
+  		<button type="button" class="btn btn-lg btn-primary btn-block">Ford Building</button>
 		<div class="btn-group">
     	    <button type="button" class="btn btn-lg btn-primary dropdown-toggle" data-toggle="dropdown">
       	       <span class="caret"></span>
@@ -122,8 +108,8 @@
       </div>
       </p> 
       <p>   
-     <div class="btn-group">
-  		<button type="button" class="btn btn-lg btn-primary">Tech Building</button>
+     <div class="btn-group btn-block">
+  		<button type="button" class="btn btn-lg btn-primary btn-block">Tech Building</button>
 		<div class="btn-group">
     	    <button type="button" class="btn btn-lg btn-primary dropdown-toggle" data-toggle="dropdown">
       	       <span class="caret"></span>
