--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Home</a>
+          <a class="navbar-brand" onclick="location='index.html'">StallScrwal</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="#">Building</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li class="dropdown">
@@ -68,7 +68,7 @@
       <div class="jumbotron">
         <h3>StallScrawl!</h3>
         <p><font size = "3" >This is a quick way to find the bathroom in the building of Northwestern.</font></p>
-        <p><a href="#" class="btn btn-primary btn-xs" role="button">Learn more &raquo;</a></p>
+        <p><a href="#" class="btn btn-primary btn-sm" role="button">Learn more &raquo;</a></p>
       </div>
 
 
@@ -78,7 +78,7 @@
       </div>
       <p>
       <p>
-  		<button type="button" class="btn btn-lg btn-primary btn-block">Mudd Libary</button>
+  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='floor.html';">Mudd Libary</button>
       </p>
       <p>
   		<button type="button" class="btn btn-lg btn-primary btn-block">Ford Building</button>
