--- a/mudd1.html
+++ b/mudd1.html
@@ -66,11 +66,11 @@
 	    </div>
 	    <div class="container theme-showcase" role="main">
 			<div class="page-header">
-				<h4>The rating of bathroom in the first floor of Mudd building</h4>
+				<h4>The first floor of Mudd building</h4>
 			</div>
 			<div class="panel panel-primary">
 			  <!-- Default panel contents -->
-				<div class="panel-heading">The rating of bathroom in the first floor of Mudd building</div>
+				<div class="panel-heading">The rating of bathroom</div>
 				  <!-- Table -->
 					<table class="table table-striped">
 						<tr>
