--- a/floor.html
+++ b/floor.html
@@ -28,55 +28,58 @@
 		  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
 		<![endif]-->
 	</head>
-<body role="document">
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" onclick="location='index.html'">StallScrawl</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a onclick="location = 'index.html'">Building</a></li>
-            <li><a href="#about">About</a></li>
-            <li class = 'active'><a href="#about">Floor</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-    <div class="container theme-showcase" role="main">
-		<div class="page-header">
-			<h4>Mudd Building</h4>
-		</div>
-		<p>
+	<body role="document">
+	    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+	      <div class="container">
+	        <div class="navbar-header">
+	          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+	            <span class="sr-only">Toggle navigation</span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </button>
+	          <a class="navbar-brand" href="#" onclick="location='index.html'">StallScrawl</a>
+	        </div>
+	        <div class="navbar-collapse collapse">
+	          <ul class="nav navbar-nav">
+	            <li><a href ="#" onclick="location = 'index.html'">Building</a></li>
+	            <li><a href="#about">About</a></li>
+	            <li class = 'active'><a href="#floor">Floor</a></li>
+	            <li><a href="#contact">Contact</a></li>
+	            <li class="dropdown">
+	              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+	              <ul class="dropdown-menu">
+	                <li><a href="#">Action</a></li>
+	                <li><a href="#">Another action</a></li>
+	                <li><a href="#">Something else here</a></li>
+	                <li class="divider"></li>
+	                <li class="dropdown-header">Nav header</li>
+	                <li><a href="#">Separated link</a></li>
+	                <li><a href="#">One more separated link</a></li>
+	              </ul>
+	            </li>
+	          </ul>
+	        </div><!--/.nav-collapse -->
+	      </div>
+	    </div>
+	    <div class="container theme-showcase" role="main">
+			<div class="page-header">
+				<h4>Mudd Building</h4>
+			</div>
 			<p>
-				<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='floor.html';">The first floor</button>
+				<p>
+					<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='mudd1.html';">The first floor</button>
+				</p>
+				<p>
+					<button type="button" class="btn btn-lg btn-primary btn-block">The second floor</button>
+				</p> 
+				<p>   
+					<button type="button" class="btn btn-lg btn-primary btn-block">The third floor</button>
+				</p>     
 			</p>
-			<p>
-				<button type="button" class="btn btn-lg btn-primary btn-block">The second floor</button>
-			</p> 
-			<p>   
-				<button type="button" class="btn btn-lg btn-primary btn-block">The third floor</button>
-			</p>     
-		</p>
-	</div>
-</body>
+		</div>
+	    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+	    <script src="http://getbootstrap.com/assets/js/docs.min.js"></script>
+	</body>
 </html>
