--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" onclick="location='index.html'">StallScrwal</a>
+          <a class="navbar-brand" onclick="location='index.html'">StallScrawl</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -66,7 +66,7 @@
 
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron">
-        <h3>StallScrawl!</h3>
+        <h3>StallScrawl</h3>
         <p><font size = "3" >This is a quick way to find the bathroom in the building of Northwestern.</font></p>
         <p><a href="#" class="btn btn-primary btn-sm" role="button">Learn more &raquo;</a></p>
       </div>
