--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     
       var GameSocre = Parse.Object.extend("GameScore")
       var gameScore = new GameScore();
-      gameScore.save({score: "1337"} {playerName: "Sean Plott"} {cheatMode: "NO"}).then(function(object){
+      gameScore.save({score: "1337"}).then(function(object){
         alert("ok");
       });
   </script>
