--- a/index.html
+++ b/index.html
@@ -93,11 +93,10 @@
     <script src="http://getbootstrap.com/assets/js/docs.min.js"></script>
     <script type="text/javascript">
       Parse.initialize("om9ynedsIy67rU9vfQh8IVR2vv0A6WnFz0jgWUrP", "mzPU7M8YQwD83alRhWwGtM9niEiDcSKs4mOKSNbp");
-    
-      var GameSocre = Parse.Object.extend("GameScore")
-      var gameScore = new GameScore();
-      gameScore.save({score: "1337"}).then(function(object){
-        alert("ok");
+      var TestObject = Parse.Object.extend("TestObject");
+      var testObject = new TestObject();
+      testObject.save({foo: "bar"} {playerName: "Sean Plott"}).then(function(object) {
+        alert("yay! it worked");
       });
   </script>
   </body>
