--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       Parse.initialize("om9ynedsIy67rU9vfQh8IVR2vv0A6WnFz0jgWUrP", "mzPU7M8YQwD83alRhWwGtM9niEiDcSKs4mOKSNbp");
       var TestObject = Parse.Object.extend("TestObject");
       var testObject = new TestObject();
-      testObject.save({foo: "bar"},{playerName: "Sean Plott"}).then(function(object) {
+      testObject.save({foo: "bar"};{playerName: "Sean Plott"}).then(function(object) {
         alert("yay! it worked");
       });
   </script>
