--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       var TestObject = Parse.Object.extend("TestObject");
       var testObject = new TestObject();
       testObject.save({foo: "bar"}).then(function(object) {
-        alert("yay! It worked");
+        alert("yay! it worked");
       });
   </script>
   </body>
