--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <script src="http://getbootstrap.com/assets/js/docs.min.js"></script>
     <script type="text/javascript">
       Parse.initialize("om9ynedsIy67rU9vfQh8IVR2vv0A6WnFz0jgWUrP", "mzPU7M8YQwD83alRhWwGtM9niEiDcSKs4mOKSNbp");
+      var GameScore = Parse.Object(a,b,m);
       var TestObject = Parse.Object.extend("TestObject");
       var testObject = new TestObject();
       testObject.save({foo: "bar3"}).then(function(object) {
