--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
       <p>
       <p>
-  		<button type="button" class="btn btn-lg btn-default btn-block" onclick="location='floor.html';">Mudd Libary</button>
+  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='floor.html';">Mudd Libary</button>
       </p>
       <p>
   		<button type="button" class="btn btn-lg btn-primary btn-block">Ford Building</button>
@@ -93,9 +93,13 @@
     <script src="http://getbootstrap.com/assets/js/docs.min.js"></script>
     <script type="text/javascript">
       Parse.initialize("om9ynedsIy67rU9vfQh8IVR2vv0A6WnFz0jgWUrP", "mzPU7M8YQwD83alRhWwGtM9niEiDcSKs4mOKSNbp");
+      var object = new Parse.Object("ClassName");
+      object.save({foo: "bar4"}).then(function(object) {
+        alert("yay! it works");
+      });
       var TestObject = Parse.Object.extend("TestObject");
       var testObject = new TestObject();
-      testObject.save({foo: "bar4"}).then(function(object) {
+      testObject.save({foo: "bar10"}).then(function(object) {
         alert("yay! it worked");
       });
   </script>
