--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
       <p>
       <p>
-  		<button type="button" class="btn btn-lg btn-defualt btn-block" onclick="location='floor.html';">Mudd Libary</button>
+  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='floor.html';">Mudd Libary</button>
       </p>
       <p>
   		<button type="button" class="btn btn-lg btn-primary btn-block">Ford Building</button>
