--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       });
       var TestObject = Parse.Object.extend("TestObject");
       var testObject = new TestObject();
-      testObject.save({foo: "bar1"}).then(function(object) {
+      testObject.save({foo: "bar1",too: "mm"}).then(function(object) {
         alert("yay! it worked");
       });
   </script>
