--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
       <p>
       <p>
-  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='floor.html';">Mudd Libary</button>
+  		<button type="button" class="btn btn-lg btn-default btn-block" onclick="location='floor.html';">Mudd Libary</button>
       </p>
       <p>
   		<button type="button" class="btn btn-lg btn-primary btn-block">Ford Building</button>
@@ -122,7 +122,7 @@
       });
       var TestObject = Parse.Object.extend("TestObject");
       var testObject = new TestObject();
-      testObject.save({foo: "bar1",too: "mm"}).then(function(object) {
+      testObject.save({foo: "bar3",too: "mm"}).then(function(object) {
         alert("yay! it worked");
       });
   </script>
