--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="http://getbootstrap.com/examples/theme/theme.css" rel="stylesheet">
     <link href="theme.css" rel="stylesheet">
     <script src="//www.parsecdn.com/js/parse-1.2.18.min.js"></script>
+    <script type = "text/javascript" src = "app.js"></script>
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
