--- a/index.html
+++ b/index.html
@@ -98,5 +98,6 @@
     <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <script src="http://getbootstrap.com/assets/js/docs.min.js"></script>
     <script type="text/javascript" src = "save.js"></script>
+    <script type="text/javascript" src = "js.js"></script>
   </body>
 </html>
