--- a/index.html
+++ b/index.html
@@ -87,13 +87,14 @@
   		<button type="button" class="btn btn-lg btn-default btn-block" onclick="location='floor.html';">Mudd Libary</button>
       </p>
       <p>
-  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="myfunction()">Ford Building</button>
+  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="myFunction()">Ford Building</button>
       </p> 
       <p>   
   		<button type="button" class="btn btn-lg btn-primary btn-block">Tech Building</button>
      </p>     
      </p>
     </div>
+    <button type="button" onclick="myFunction()">Try it</button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <script src="http://getbootstrap.com/assets/js/docs.min.js"></script>
