--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
       <p>
       <p>
-  		<button type="button" class="btn btn-lg btn-default btn-block" onclick="location='floor.html';">Mudd Libary</button>
+  		<button type="button" class="btn btn-lg btn-default btn-block" onclick="location='floor.html';">Mudd Libary</button></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span type="button" class="glyphicon glyphicon-star-empty" onclick="myfull()"></span>
       </p>
       <p>
   		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="myFunction()">Ford Building</button>
@@ -94,11 +94,9 @@
      </p>     
      </p>
     </div>
-    <button type="button" onclick="myFunction()">Try it</button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <script src="http://getbootstrap.com/assets/js/docs.min.js"></script>
-    <script type="text/javascript" src = "save.js"></script>
     <script type="text/javascript" src = "js.js"></script>
   </body>
 </html>
