--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='floor.html';">Mudd Libary</button></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span type="button" class="glyphicon glyphicon-star-empty" onclick="myfull()"></span>
       </p>
       <p>
-  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="myFunction()">Ford Building</button>
+  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="myFunctionQuery()">Ford Building</button>
       </p> 
       <p>   
   		<button type="button" class="btn btn-lg btn-primary btn-block">Tech Building</button>
