--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
       <p>
       <p>
-  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='floor.html';">Mudd Libary</button></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span class="glyphicon glyphicon-star-empty"></span><span type="button" class="glyphicon glyphicon-star-empty" onclick="myfull()"></span>
+  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='floor.html';">Mudd Libary</button>
       </p>
       <p>
   		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="myFunctionQuery()">Ford Building</button>
