--- a/map/map.html
+++ b/map/map.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="http://getbootstrap.com/assets/ico/favicon.ico">
+    <link rel="shortcut icon" href="">
 
     <title>StallScrawl_Map</title>
 
@@ -17,11 +17,13 @@
     Author: Liang Ge
     -->
     <script type="text/javascript">
-      var loadedShowFriends = true;
-      var loadedShowMarkers = true;
+    <!-- Add Control Variable, use for back-end -->
+      var Show_1_floor = true;
+      var Show_2_floor = true;
 
     </script>
 
+    <script src="//www.parsecdn.com/js/parse-1.2.18.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="map.js"></script>
@@ -79,10 +81,25 @@
         </div><!--/.nav-collapse -->
       </div>
     </div>
-    <div class="container theme-showcase" role="main">
+   <!-- <div class="container theme-showcase" role="main"> -->
       <!-- Map Section -->
       <div id="map-canvas"></div>
-    </div>
+      <p>
+      <button type="button" class="btn btn-lg btn-default btn-block" onclick="myFunctionQuery()">Ground Floor</button>
+      </p>
+      <p>
+      <button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='../floor.html';">First Floor</button>
+      </p>
+      <p>
+      <button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='../floor.html';">Second Floor</button>
+      </p>
+      <p>
+      <button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='../floor.html';">Third Floor</button>
+      </p>
+      <p>
+      <button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='../floor.html';">fourth Floor</button>
+      </p>
+    <!-- </div> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <script src="http://getbootstrap.com/assets/js/docs.min.js"></script>
