--- a/map/map.html
+++ b/map/map.html
@@ -85,7 +85,7 @@
       <!-- Map Section -->
       <div id="map-canvas"></div>
       <p>
-      <button type="button" class="btn btn-lg btn-default btn-block" onclick="myFunctionQuery()">Ground Floor</button>
+      <button type="button" class="btn btn-lg btn-primary btn-block" onclick="myFunctionQuery()">Ground Floor</button>
       </p>
       <p>
       <button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='../floor.html';">First Floor</button>
