--- a/floor.html
+++ b/floor.html
@@ -71,7 +71,7 @@
 					<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='mudd1.html';">The first floor</button>
 				</p>
 				<p>
-					<button type="button" class="btn btn-lg btn-primary btn-block" onclick="myFunctionSave()">The second floor</button>
+					<button type="button" class="btn btn-lg btn-default btn-block" onclick="myFunctionSave()">The second floor</button>
 				</p> 
 				<p>   
 					<button type="button" class="btn btn-lg btn-primary btn-block">The third floor</button>
