--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='floor.html';">Mudd Libary</button>
       </p>
       <p>
-  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="myFunctionSave()">Ford Building</button>
+  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='MapView.html'">Ford Building</button>
       </p> 
       <p>   
   		<button type="button" class="btn btn-lg btn-primary btn-block">Tech Building</button>
