--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='MapView.html'">Ford Building</button>
       </p> 
       <p>   
-  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="myFunctionChange">Tech Building</button>
+  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="myFunctionChange()">Tech Building</button>
      </p>     
      </p>
     </div>
