--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
   		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='floor.html';">Mudd Libary</button>
       </p>
       <p>
-  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='MapView.html'">Ford Building</button>
+  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="myFunctionChange()">Ford Building</button>
       </p> 
       <p>   
-  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="myFunctionChange()">Tech Building</button>
+  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="MapView.html">Tech Building</button>
      </p>     
      </p>
     </div>
