--- a/Xiaoyang/MapView.html
+++ b/Xiaoyang/MapView.html
@@ -575,7 +575,7 @@
                         <div class="raty"></div>
 
                         <h4> Spaciousness:</h4>
-                        <div class="raty">
+                        <div id = "fixed" class="raty">
                         </div>
                         <h4> Odor:</h4> 
                         <div class="raty">
