--- a/Xiaoyang/MapView.html
+++ b/Xiaoyang/MapView.html
@@ -96,16 +96,17 @@
                 </div>
             </div>
 
-            <div class="col-xs-2">
+            <div class="col-xs-1">
             </div>
 
-            <div class="col-xs-4 col-xs-offset-1 btn-group" data-toggle="buttons">
+            <div class="col-xs-5 col-xs-offset-1 btn-group" data-toggle="buttons">
                 <label class="btn btn-primary">
-                    <input type="radio" id="female" name="gender">F
+                    <input type="radio" id="female" name="gender"><img src = "glyphicons_003_user.png">
                 </label>
                 <label class="btn btn-danger">
-                    <input type="radio" id="male" name="gender">M
+                    <input type="radio" id="male" name="gender"><img src = "glyphicons_004_girl.png">
                 </label>
+
             </div>
         </div>
     </div>
@@ -572,10 +573,10 @@
                     <h3>Your Ratings:</h3>
                     <div class="form-group">
                         <h4> Cleanliness:  </h4>
-                        <div class="raty" ></div>
+                        <div class="raty"></div>
 
                         <h4> Spaciousness:</h4>
-                        <div id = "fixed" class="raty">
+                        <div class="raty">
                         </div>
                         <h4> Odor:</h4> 
                         <div class="raty">
