--- a/review_Page.html
+++ b/review_Page.html
@@ -162,7 +162,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
     <script src="http://getbootstrap.com/assets/js/docs.min.js"></script>
-    <script src="../jquery.raty.js"></script>
+    <script src="jquery.raty.js"></script>
     <script>
     	$('.raty').raty();
     </script>
