--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location='floor.html';">Mudd Libary</button>
       </p>
       <p>
-  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="myFunctionChange()">Ford Building</button>
+  		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="myFunctionFran()">Ford Building</button>
       </p> 
       <p>   
   		<button type="button" class="btn btn-lg btn-primary btn-block" onclick="location = 'MapView.html'">Tech Building</button>
